[package]
name = "heic-to-gxml"
version = "0.1.0"
authors = ["Johannes Wünsche <johannes@spacesnek.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libheif-rs = { git = "https://github.com/spraints/libheif-rs.git" }
png = "0.16.8"
serde = { version = "1.0.124", features = ["derive"] }
serde-xml-rs = "0.4.1"
