[package]
name = "heic-to-dynamic-gnome-wallpaper"
version = "0.1.0"
authors = ["Johannes Wünsche <johannes@spacesnek.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
base64 = "0.13.0"
clap = "2.33.3"
colored = "2.0.0"
indicatif = "0.15.0"
libheif-rs = { git = "https://github.com/spraints/libheif-rs.git" }
plist = "1.1.0"
png = "0.16.8"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.124", features = ["derive"] }
