[package]
name = "heic-to-dynamic-gnome-wallpaper"
version = "0.1.6"
authors = ["Johannes Wünsche <johannes@spacesnek.rocks>"]
edition = "2018"
description = "CLI tool to convert heic image containers used in MacOS's dynamic wallpapers to dynamic gnome xml wallpapers"
readme = "README.md"
homepage = "https://git.spacesnek.rocks/johannes/heic-to-gnome-xml-wallpaper"
repository = "https://git.spacesnek.rocks/johannes/heic-to-gnome-xml-wallpaper"
categories = ["command-line-utilities", "multimedia::images", "multimedia"]
keywords = ["heic", "gnome", "wallpaper", "dynamic", "convert"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
base64 = "0.13.0"
chrono = "0.4.19"
clap = "3.1"
colored = "2.0.0"
indicatif = "0.16"
libheif-rs = "0.15"
plist = "1.1.0"
png = "0.17"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.124", features = ["derive"] }

[package.metadata.rpm]
package = "heic-to-dynamic-gnome-wallpaper"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
heic-to-dynamic-gnome-wallpaper = { path = "/usr/bin/heic-to-dynamic-gnome-wallpaper" }
